fix: fix css on safari

--- a/style/main.css
+++ b/style/main.css
@@ -817,7 +817,7 @@ body {
 }
 .info {
   display: flex;
-  height: 100%;
+  height: 34.5rem;
   flex-direction: column;
   gap: 0.5em;
   color: var(--subtext0);
@@ -829,7 +829,7 @@ body {
   border-radius: 1.5rem;
   padding: 0.75rem;
  
-  box-shadow: var(--shadow1);
+  box-shadow: var(--shadow0);
 }
 .avatar {
   display: flex;
